--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^7.0.0",
+    "@fortawesome/free-regular-svg-icons": "^7.0.0",
     "@heroicons/react": "^2.2.0",
     "@ramonak/react-progress-bar": "^5.1.1",
     "@react-pdf/renderer": "^3.4.2",
-    "axios": "^1.10.0",
+    "axios": "^1.11.0",
     "chart.js": "^4.4.7",
     "flatpickr": "^4.6.13",
     "framer-motion": "^12.23.6",
@@ -21,6 +23,7 @@
     "html2pdf.js": "^0.9.0",
     "http-proxy-middleware": "^2.0.6",
     "jspdf": "^2.5.1",
+    "lottie-web": "^5.13.0",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "multiselect-react-dropdown": "^2.0.25",
