--- a/package.json
+++ b/package.json
@@ -38,9 +38,10 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-google-charts": "^4.0.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.5.0",
     "react-loader-spinner": "^6.1.6",
     "react-multi-carousel": "^2.8.5",
+    "react-native-web": "^0.20.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.30.1",
     "react-secure-storage": "^1.3.0",
