--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
     "@fortawesome/free-regular-svg-icons": "^7.0.0",
     "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.14.4",
     "@ramonak/react-progress-bar": "^5.1.1",
     "@react-pdf/renderer": "^3.4.2",
     "axios": "^1.11.0",
@@ -23,6 +24,7 @@
     "html2pdf.js": "^0.9.0",
     "http-proxy-middleware": "^2.0.6",
     "jspdf": "^2.5.1",
+    "lottie-react": "^2.4.1",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
@@ -31,6 +33,7 @@
     "pusher-js": "^8.4.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.4.0",
     "react-data-table-component": "^7.6.2",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^6.9.0",
