--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,12 +10,12 @@
   "background_color": "#fa99ca",
   "icons": [
     {
-      "src": "/icons/logo.png",
+      "src": "/icons/logo-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/logo.png",
+      "src": "/icons/logo-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
