--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-native-web": "^0.20.0",
     "react-paginate": "^8.2.0",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^6.30.1",
     "react-secure-storage": "^1.3.0",
     "react-select": "^5.10.1",
